--- a/.env
+++ b/.env
@@ -30,11 +30,11 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=1025
-MAIL_USERNAME="yazlab2.pts@gmail.com"
-MAIL_PASSWORD="grknizmir41"
+MAIL_PORT=465
+MAIL_USERNAME=yazlab2.pts@gmail.com
+MAIL_PASSWORD=grknizmir41
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=
+MAIL_FROM_ADDRESS=yazlab2.pts@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
